[tool.poetry]
name = "tom-turtle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.104.1"
duckdb = "^0.9.2"
geojson = "^3.1.0"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
